# data-analytics-demo

./: .gitignore  .markdownlint-cli2.jsonc  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  initial_context.md  lightdash.config.yml  package.json  pnpm-lock.yaml  pyproject.toml  skills.manifest.json  tsconfig.base.json  tsconfig.scripts.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  codex-changelog.yml  codex-review.yml  lightdash-deploy.yml  lightdash-preview-cleanup.yml  lightdash-preview.yml  vercel-deploy.yml
apps/analytics-suite/: components.json  middleware.ts  package.json  tsconfig.json  vercel.json
apps/architecture-explainer/: components.json  package.json  tsconfig.json
apps/challenger/: .env.local.example  package.json  playwright.config.ts
apps/changelog/: README.md  package.json  vercel.json
apps/changelog-site/: README.md  docusaurus.config.ts  package.json  vercel.json
apps/docs-site/: package.json
apps/pdr/: package.json  tsconfig.json
apps/perf-sandbox/: .env.local.example  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/situation-room/: .env.local.example  .gitignore  components.json  package.json
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
docs/: access-management.md  agent-skills.md  agentic-bi-principles.md  changelog-ops.md  lightdash-playbook.md  semantic-layer-standards.md  setup-secrets.md  shared-folder-validation.md
docs/analytics-suite/: performance-notes.md
lightdash/charts/: avg-deal-size-kpi.yml  closed-won-opportunities.yml  deals-by-size-bucket.yml  expansion-annual-pacing.yml  expansion-avg-age.yml  expansion-avg-booked-deal.yml  expansion-bookings-acv.yml  expansion-bookings-count.yml  expansion-close-rate.yml  expansion-pipeline-created.yml  expansion-sql.yml  expansion-sqo.yml  migration-annual-pacing.yml  migration-avg-age.yml  migration-avg-booked-deal.yml  migration-avg-users.yml  migration-bookings-acv.yml  migration-bookings-count.yml  migration-close-rate.yml  migration-median-users.yml  migration-pipeline-created.yml  migration-sal.yml  migration-sql.yml  migration-sqo.yml  new-logo-annual-pacing.yml  new-logo-avg-age.yml  new-logo-avg-booked-deal.yml  new-logo-bookings-acv.yml  new-logo-bookings-count.yml  new-logo-close-rate.yml  new-logo-gate-1-complete.yml  new-logo-pipeline-created.yml  new-logo-sdr-points.yml  new-logo-sql.yml  new-logo-sqo-users.yml  new-logo-sqo.yml  one-time-revenue.yml  open-pipeline-kpi.yml  (+47 more)
scripts/: check-tool-versions.sh  validate-lightdash-refs.sh
tests/: agent-utils.test.ts  conftest.py  pr-template.test.ts  test_agent_skillsets.py  test_agent_utils.py  test_github.py  test_lightdash_refs.py  test_pr_template.py  test_shared_folder.py  test_skills_manifest.py
tooling/: pyproject.toml
tooling/src/lib/: agent_utils.py
tooling/src/por_tooling/automation/: generate_changelog.py
tooling/src/por_tooling/lib/: agent_utils.py  pr_template.py
tooling/src/por_tooling/validators/: lightdash_refs.py  shared_folder.py  skills_manifest.py
tooling/src/validators/: skills_manifest.py
tooling/tests/: conftest.py  test_agent_utils.py  test_github.py  test_lightdash_refs.py  test_pr_template.py  test_shared_folder.py  test_skills_manifest.py
(+536 files in other folders)
