[project]
name = "por-tooling"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "openai>=1.60",
    "pyyaml>=6.0",
]

[project.scripts]
validate-refs = "por_tooling.validators.lightdash_refs:main"
validate-shared = "por_tooling.validators.shared_folder:main"
generate-changelog = "por_tooling.automation.generate_changelog:main"
check-skills = "por_tooling.validators.skills_manifest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/por_tooling"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["por_tooling", "tests"]
mypy_path = "src"

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "types-pyyaml>=6.0.12.20250915",
]
